[gd_scene load_steps=6 format=3 uid="uid://qs3hfywstir1"]

[ext_resource type="Script" path="res://components/marquee/marquee.gd" id="2_4fddt"]
[ext_resource type="FontVariation" uid="uid://btfqwd4vt7ech" path="res://assets/pixel_font/pixel_font.tres" id="2_wrab3"]
[ext_resource type="Script" path="res://components/marquee/handler.gd" id="4_8e06d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_shddl"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.938404, 0, 0.243473, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4ouxy"]
font = ExtResource("2_wrab3")
font_size = 12

[node name="Marquee" type="Node"]
script = ExtResource("4_8e06d")

[node name="Control" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(1920, 0)
offset_right = 1280.0
offset_bottom = 23.0
theme_override_constants/separation = 0
script = ExtResource("2_4fddt")
scroll_speed = 30

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
root_node = NodePath("../..")

[node name="LabelA" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_shddl")
text = "Welcome to erodozer's Stream"
label_settings = SubResource("LabelSettings_4ouxy")

[node name="Spacer" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_shddl")
text = " :://:: "
label_settings = SubResource("LabelSettings_4ouxy")

[node name="LabelB" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_shddl")
label_settings = SubResource("LabelSettings_4ouxy")

[connection signal="update_text" from="." to="Control" method="build_marquee"]
